--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,23 @@
+/* GRID LAYOUT CSS */
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+
+.pantalla{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: #2196F3;
+    padding: 10px;
+}
+
+.caja{
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
 }
