--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 .pantalla{
     display: grid;
-    grid-column-gap: 50px;
+    grid-row-gap: 50px;
     grid-template-columns: auto auto auto;
     background-color: #2196F3;
     padding: 10px;
