--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
-@import url(variables.css);
-
-*{    
+*{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:  Arial, Helvetica, sans-serif;
     box-sizing: content-box;
 }
 
@@ -12,88 +10,124 @@ body{
 }
 
 .container{
+    margin: 10px;
+    background: #fefefe;
+    width: 100%;
+    max-height: 130vh;
     display: grid;
-    border: 1px solid black;
-    grid-template-columns: repeat(20, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-
-    grid-gap: 8px;
-
-    width: 80%;
-    margin:0 auto ;
-    height: 600px;
+    grid-gap: 10px;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-template-areas:
+    "caja1 caja1 caja1 caja2 caja2 caja2 caja3 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja7 caja7 caja7 caja7 caja4 caja4 caja4"
+    "caja5 caja6 caja6 caja7 caja7 caja7 caja7 caja4 caja4 caja4"
+    "caja5 caja6 caja6 caja7 caja7 caja7 caja7 caja8 caja9 caja9"
+    "caja10 caja10 caja10 caja7 caja7 caja7 caja7 caja11 caja11 caja11"
+    "caja12 caja12 caja13 caja14 caja15 caja15 caja16 caja17 caja17 caja17"
+    "caja12 caja12 caja13 caja14 caja15 caja15 caja16 caja17 caja17 caja17"
+    ;
 }
 
-.container div{
-    border-radius: 8px;
-    background: var(--color-secundary);
-}
 
 .item1{
-    border: 2px solid red;
-    grid-row: 1  / 3;
+    grid-area: caja1;
+    display: grid;
+    place-items: center;
 }
 
 .item2{
-    border: 2px solid rgb(13, 0, 255); 
+    grid-area: caja2;
 }
 
 .item3{
-    border: 2px solid rgb(234, 255, 0);
+    grid-area: caja3;
 }
 
 .item4{
-    border: 2px solid rgb(255, 166, 0);
+    grid-area: caja4;
 }
 
 .item5{
-    border: 2px solid rgb(64, 255, 0);
+    grid-area: caja5;
 }
 
 .item6{
-    border: 2px solid rgb(0, 255, 255);
+    grid-area: caja6;
 }
 
 .item7{
-    border: 2px solid rgb(102, 0, 255);
+    grid-area: caja7;
 }
 
 .item8{
-    border: 2px solid rgb(255, 0, 179);
+    grid-area: caja8;
 }
 
 .item9{
-    border: 2px solid rgb(0, 0, 0);
+    grid-area: caja9;
 }
 
 .item10{
-    border: 2px solid rgb(104, 73, 23);
+    grid-area: caja10;
 }
 
 .item11{
-    border: 2px solid rgb(209, 114, 114);
+    grid-area: caja11;
 }
 
 .item12{
-    border: 2px solid rgb(144, 72, 174);
+    grid-area: caja12;
 }
 
 .item13{
-    border: 2px solid rgb(255, 119, 29);
+    grid-area: caja13;
 }
 
 .item14{
-    border: 2px solid rgb(0, 87, 6);
+    grid-area: caja14;
 }
 
 .item15{
-    border: 2px solid rgb(14, 0, 66);
+    grid-area: caja15;
 }
 
 .item16{
-    border: 2px solid rgb(125, 123, 0);
+    grid-area: caja16;
 }
 
 .item17{
-    border: 2px solid rgb(255, 0, 60);
+    grid-area: caja17;
+}
+
+.item1 img,
+.item2 img,
+.item3 img,
+.item4 img,
+.item5 img,
+.item6 img,
+.item7 img,
+.item8 img,
+.item9 img,
+.item10 img,
+.item11 img,
+.item12 img,
+.item13 img,
+.item14 img,
+.item15 img,
+.item16 img,
+.item17 img {
+    width: 100%;
+    height: 100%;
+    max-width: auto;
+    max-height: auto;
+    object-fit: contain;
+    background: #e7e9e8;
+    border-radius: 20px;
+}
+
+@media (width < 800px){
+    .container img{
+        border: 3px solid red;
+    }
 }
