--- a/css/style.css
+++ b/css/style.css
@@ -100,10 +100,18 @@ body{
     grid-area: caja17;
 }
 
+.imagen4{
+    width: 100%;
+    height: 100%;
+    max-width: auto;
+    max-height: auto;
+    object-fit: cover;
+    background: #e7e9e8;
+    border-radius: 20px;
+}
 .item1 img,
 .item2 img,
 .item3 img,
-.item4 img,
 .item5 img,
 .item6 img,
 .item7 img,
@@ -126,8 +134,64 @@ body{
     border-radius: 20px;
 }
 
+
 @media (width < 800px){
-    .container img{
-        border: 3px solid red;
+    .container {
+        /* display: grid; */
+        grid-template-columns: 1fr;
+        /* grid-template-columns: repeat(2, 1fr); */
+        grid-template-areas: 
+        "caja1"
+        "caja2"
+        "caja3"
+        "caja4"
+        "caja5"
+        "caja6"
+        "caja7"
+        "caja8"
+        "caja9"
+        "caja10"
+        "caja11"
+        "caja12"
+        "caja13"
+        "caja14"
+        "caja15"
+        "caja16"
+        "caja17"
+
+        ;
+        /* grid-template-areas:
+        "caja1 caja1 caja1" 
+        "caja2 caja2 caja2" 
+        "caja3" 
+        "caja4 caja4 caja4"
+        "caja1 caja1 caja1" 
+        "caja7 caja7 caja7 caja7" 
+        "caja4 caja4 caja4"
+        "caja5" 
+        "caja6 caja6" 
+        "caja7 caja7 caja7 caja7" 
+        "caja4 caja4 caja4"
+        "caja5" 
+        "caja6 caja6" 
+        "caja7 caja7 caja7 caja7" 
+        "caja8" 
+        "caja9 caja9"
+        "caja10 caja10 caja10" 
+        "caja7 caja7 caja7 caja7" 
+        "caja11 caja11 caja11"
+        "caja12 caja12" 
+        "caja13" 
+        "caja14" 
+        "caja15 caja15" 
+        "caja16" 
+        "caja17 caja17 caja17"
+        "caja12 caja12" 
+        "caja13" 
+        "caja14" 
+        "caja15 caja15" 
+        "caja16" 
+        "caja17 caja17 caja17"
+        ; */
     }
 }
