--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,40 @@ body{
 }
 
 .container{
-    margin: 10px;
+    border: 1px solid red;
+    margin: 20px auto 20px ;
     background: #fefefe;
-    width: 100%;
-    max-height: 130vh;
+    width: 99%;
+    max-height: 97.5vh;
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(7, 1fr);
+    grid-gap: 20px;
+    grid-template-columns: repeat(24, 1fr);
+    grid-template-rows: repeat(27, 1fr);
     grid-template-areas:
-    "caja1 caja1 caja1 caja2 caja2 caja2 caja3 caja4 caja4 caja4"
-    "caja1 caja1 caja1 caja7 caja7 caja7 caja7 caja4 caja4 caja4"
-    "caja5 caja6 caja6 caja7 caja7 caja7 caja7 caja4 caja4 caja4"
-    "caja5 caja6 caja6 caja7 caja7 caja7 caja7 caja8 caja9 caja9"
-    "caja10 caja10 caja10 caja7 caja7 caja7 caja7 caja11 caja11 caja11"
-    "caja12 caja12 caja13 caja14 caja15 caja15 caja16 caja17 caja17 caja17"
-    "caja12 caja12 caja13 caja14 caja15 caja15 caja16 caja17 caja17 caja17"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja1 caja1 caja1 caja1 caja1 caja1 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja5 caja5 caja5 caja6 caja6 caja6 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja5 caja5 caja5 caja6 caja6 caja6 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja4 caja4 caja4 caja4 caja4 caja4"
+    "caja5 caja5 caja5 caja6 caja6 caja6 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja8 caja8 caja8 caja9 caja9 caja9"
+    "caja10 caja10 caja10 caja10 caja10 caja10 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja11 caja11 caja11 caja11 caja11 caja11"
+    "caja10 caja10 caja10 caja10 caja10 caja10 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja11 caja11 caja11 caja11 caja11 caja11"
+    "caja10 caja10 caja10 caja10 caja10 caja10 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja11 caja11 caja11 caja11 caja11 caja11"
+    "caja10 caja10 caja10 caja10 caja10 caja10 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja11 caja11 caja11 caja11 caja11 caja11"
+    "caja10 caja10 caja10 caja10 caja10 caja10 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja7 caja11 caja11 caja11 caja11 caja11 caja11"
+    "caja12 caja12 caja12 caja12 caja13 caja13 caja14 caja14 caja15 caja15 caja15 caja15 caja16 caja16 caja17 caja17 caja17 caja17 caja17 caja17"
     ;
 }
 
@@ -107,9 +125,49 @@ body{
     max-height: auto;
     object-fit: cover;
     background: #e7e9e8;
-    border-radius: 20px;
+    border-radius: 50px;
 }
-.item1 img,
+
+.imagen1{
+    width: 100%;
+    height: 100%;
+    max-width: auto;
+    max-height: auto;
+    object-fit: cover;
+    background: #e7e9e8;
+    border-radius: 50px;
+}
+
+.imagen3{
+    width: 100%;
+    height: 100%;
+    max-width: auto;
+    max-height: auto;
+    object-fit: cover;
+    background: #e7e9e8;
+    border-radius: 50px;
+}
+
+.imagen5{
+    width: 100%;
+    height: 100%;
+    max-width: auto;
+    max-height: auto;
+    object-fit: cover;
+    background: #e7e9e8;
+    border-radius: 50px;
+}
+
+.imagen6{
+    width: 100%;
+    height: 100%;
+    max-width: auto;
+    max-height: auto;
+    object-fit: cover;
+    background: #e7e9e8;
+    border-radius: 50px;
+}
+
 .item2 img,
 .item3 img,
 .item5 img,
@@ -135,63 +193,26 @@ body{
 }
 
 
-@media (width < 800px){
+@media (max-width: 800px) {
     .container {
-        /* display: grid; */
         grid-template-columns: 1fr;
-        /* grid-template-columns: repeat(2, 1fr); */
         grid-template-areas: 
-        "caja1"
-        "caja2"
-        "caja3"
-        "caja4"
-        "caja5"
-        "caja6"
-        "caja7"
-        "caja8"
-        "caja9"
-        "caja10"
-        "caja11"
-        "caja12"
-        "caja13"
-        "caja14"
-        "caja15"
-        "caja16"
-        "caja17"
-
-        ;
-        /* grid-template-areas:
-        "caja1 caja1 caja1" 
-        "caja2 caja2 caja2" 
-        "caja3" 
-        "caja4 caja4 caja4"
-        "caja1 caja1 caja1" 
-        "caja7 caja7 caja7 caja7" 
-        "caja4 caja4 caja4"
-        "caja5" 
-        "caja6 caja6" 
-        "caja7 caja7 caja7 caja7" 
-        "caja4 caja4 caja4"
-        "caja5" 
-        "caja6 caja6" 
-        "caja7 caja7 caja7 caja7" 
-        "caja8" 
-        "caja9 caja9"
-        "caja10 caja10 caja10" 
-        "caja7 caja7 caja7 caja7" 
-        "caja11 caja11 caja11"
-        "caja12 caja12" 
-        "caja13" 
-        "caja14" 
-        "caja15 caja15" 
-        "caja16" 
-        "caja17 caja17 caja17"
-        "caja12 caja12" 
-        "caja13" 
-        "caja14" 
-        "caja15 caja15" 
-        "caja16" 
-        "caja17 caja17 caja17"
-        ; */
+            "caja1"
+            "caja2"
+            "caja3"
+            "caja4"
+            "caja5"
+            "caja6"
+            "caja7"
+            "caja8"
+            "caja9"
+            "caja10"
+            "caja11"
+            "caja12"
+            "caja13"
+            "caja14"
+            "caja15"
+            "caja16"
+            "caja17";
     }
 }
