--- a/css/style.css
+++ b/css/style.css
@@ -10,19 +10,16 @@ body{
 }
 
 .container{
-    margin: 20px auto 20px ;
+    margin: 20px;
     background: #fefefe;
-    width: 99%;
-    max-height: 97.5vh;
+    width: 95%;
+    max-height: 95vh;
+    padding-inline: 20px;
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(24, 1fr);
+    grid-template-columns: repeat(20, 1fr);
     grid-template-rows: repeat(27, 1fr);
     grid-template-areas:
-    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
-    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
-    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
-    "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
     "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
     "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
     "caja1 caja1 caja1 caja1 caja1 caja1 caja2 caja2 caja2 caja2 caja2 caja3 caja3 caja3 caja4 caja4 caja4 caja4 caja4 caja4"
@@ -46,7 +43,9 @@ body{
     ;
 }
 
-
+.item1{
+    grid-area: caja1;
+}
 .item1{
     grid-area: caja1;
     display: grid;
